Added support for starting a dummy router. Added support for detecting whether I2PControl is run from a .jar (via RouterConsole). Revised build.xml to include new libraries and remove old libraries. Refactored NetworkInfo and changed name inte NetworkSetting.